--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "desafio3",
+  "name": "pre_entrega1",
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Edward Bastos",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
