--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "pre_entrega1",
+  "name": "desafio4",
   "version": "1.0.0",
-  "description": "",
   "main": "./src/app.js",
   "type": "module",
   "scripts": {
@@ -9,9 +8,16 @@
     "start": "nodemon ./src/app.js"
   },
   "keywords": [],
-  "author": "Edward Bastos",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "description": ""
 }
