--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "desafio4",
+  "name": "pre---entrega-2",
   "version": "1.0.0",
-  "main": "./src/app.js",
+  "description": "",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js"
+    "dev": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "description": ""
+  }
 }
