--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.0.0",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   }
