--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "pre---entrega-2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/app.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "commander": "^11.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.17.3",
-    "mongodb": "^6.0.0",
-    "mongoose": "^7.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.1",
+    "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "sessions": "^0.0.2-7",
     "socket.io": "^4.7.2"
-  }
+  },
+  "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "main": "index.js",
+  "name": "practica-integradora2",
+  "scripts": {
+    "dev": "nodemon src/app.js --mode dev",
+    "start": "node src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "type": "module",
+  "version": "1.0.0"
 }
